feat: initial commit for pseudo localization

--- a/package.json
+++ b/package.json
@@ -9,17 +9,7 @@
   "source": "src/index",
   "files": [
     "src",
-    "lib",
-    "android",
-    "ios",
-    "cpp",
-    "pseudo-localization-rn.podspec",
-    "!lib/typescript/example",
-    "!android/build",
-    "!ios/build",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__"
+    "lib"
   ],
   "scripts": {
     "test": "jest",
@@ -32,9 +22,7 @@
     "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
-    "react-native",
-    "ios",
-    "android"
+    "react-native"
   ],
   "repository": "https://www.roshan.info.np",
   "author": "Roshan Gautam <roosan.gm@gmail.com> (https://www.roshan.info.np)",
